Don't show manifestos for deselected candidates

--- a/wcivf/apps/people/templates/people/person_detail.html
+++ b/wcivf/apps/people/templates/people/person_detail.html
@@ -42,7 +42,7 @@
 
         {% include "people/includes/_person_policy_card.html" %}
 
-        {% if object.show_national_manifesto %}
+        {% if object.show_national_manifesto and not object.deselected %}
             {% include "people/includes/_person_manifesto_card.html" with party=object.national_party party_name=object.national_party.name %}
         {% endif %}
 
@@ -57,7 +57,7 @@
             {% include "people/includes/_person_local_party_card.html" with person=object.featured_candidacy.person party=object.local_party.name %}
         {% endif %} {% endcomment %}
 
-        {% if object.current_or_future_candidacies and object.national_party and not object.local_party %}
+        {% if object.current_or_future_candidacies and object.national_party and not object.local_party and not object.deselected %}
             {% include "people/includes/_person_national_party_card.html" with person=object.featured_candidacy.person party=object.national_party.name %}
         {% endif %}
 
