Add translation tags

--- a/wcivf/apps/hustings/templates/hustings/husting_form.html
+++ b/wcivf/apps/hustings/templates/hustings/husting_form.html
@@ -2,17 +2,25 @@
 {% load dc_forms %}
 
 {% block content %}
-    <h1>Tell us about a husting in {{ ballot.friendly_name }}</h1>
-    <p>We will review your suggestion before adding it to the site.
-        If you know about a lot of hustings, <a href="https://democracyclub.org.uk/contact/">please get in touch</a>.
+    <h1>
+        {% blocktrans trimmed with location=ballot.friendly_name %}Tell us about a husting in {{ location }}{% endblocktrans %}
+    </h1>
+    <p>
+        {% trans "We will review your suggestion before adding it to the site." %}
+        {% blocktrans %}
+            If you know about a lot of hustings, <a href="https://democracyclub.org.uk/contact/">please get in touch</a>.
+        {% endblocktrans %}
     </p>
-    <p>We will only accept hustings that are open to the public and invite all candidate. Single party or
-        paid-for events will not be accepted.</p>
+    <p>
+        {% trans "We will only accept hustings that are open to the public and invite all candidate." %}
+        {% trans "We require a url to verify the husting details." %}
+        {% trans "Single party or paid-for events will not be accepted." %}
+    </p>
     <form method="post">
         {{ form.errors }}
         {{ form.non_field_errors }}
         {% csrf_token %}
         {{ form|dc_form }}
-        <button class="submit ds-button">Submit event</button>
+        <button class="submit ds-button">{% trans "Submit event" %}</button>
     </form>
 {% endblock %}
